# trading-engine

./: .pre-commit-config.yaml  pyproject.toml
.github/actions/setup/: action.yaml
.github/workflows/: code-checks.yaml
src/trading_engine/config/: __init__.py  settings.py
src/trading_engine/scripts/: __init__.py  binance_data.py
src/trading_engine/utils/: __init__.py  math.py
