[project]
name = "trading-engine"
version = "0.1.0"
description = "Trading engine built in Python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.1.0",
    "marimo>=0.23.6",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "polars>=1.40.1",
    "requests>=2.34.2",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pyright>=1.1.409",
]

[tool.ruff]
line-length = 100